Issue #5772 Fix jndi mail class duplication
Signed-off-by: Jan Bartel <janb@webtide.com>