@@ -17,14 +17,6 @@
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>
-            @{argLine} ${jetty.surefire.argLine} --add-modules jakarta.mail --patch-module jakarta.mail=${settings.localRepository}/com/sun/mail/mailapi/${mail-api.version}/mailapi-${mail-api.version}.jar
-          </argLine>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <extensions>true</extensions>
@@ -74,12 +66,6 @@
       <groupId>jakarta.mail</groupId>
       <artifactId>jakarta.mail-api</artifactId>
       <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>com.sun.mail</groupId>
-      <artifactId>mailapi</artifactId>
-      <version>${mail-api.version}</version>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
